fixed a lot of formatting

--- a/docs/documentation/fhirextensions.ipynb
+++ b/docs/documentation/fhirextensions.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "853dd1f5-7b61-4022-8620-2a49f396d0f3",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_code"
+    ]
+   },
    "outputs": [],
    "source": [
     "%%capture [--no-stdout]\n",
