--- a/docs/documentation/fhirqueryman.ipynb
+++ b/docs/documentation/fhirqueryman.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# fhir-query man page"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "!!! tip\n",
+    "    FHIR-Aggregator is a command line package. The following commands are all shown an ipython notebook.\n",
+    "     - to run commands in python you will need to use export the `fq` command to the terminal using the `os` package:\n",
+    "       ```python\n",
+    "          import os\n",
+    "          os.system('fq --help')\n",
+    "       ```\n",
+    "    - to run commands on the command line do not add the `!`, as in:\n",
+    "      `fq --help`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To see help pages while you work type:\n",
     "\n",
     "```\n",
@@ -21,7 +43,226 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Install `fhir-query`"
+    "## Install `fhir-query`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "'pip install fhir-aggregator-client'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## URL for FHIR-Aggregator server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`%env FHIR_BASE=https://google-fhir.fhir-aggregator.org`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get a tsv of all FHIR-Aggregator vocabulary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`!fq vocabulary vocabulary.tsv --fhir-base-url $FHIR_BASE`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## fq options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n",
+      "\u001b[0mUsage: fq [OPTIONS] COMMAND [ARGS]...\n",
+      "\n",
+      "  Run FHIR GraphDefinition traversal.\n",
+      "\n",
+      "Options:\n",
+      "  --help  Show this message and exit.\n",
+      "\n",
+      "Commands:\n",
+      "  main*       Run FHIR GraphDefinition traversal.\n",
+      "  dataframe   Create dataframes from the local db.\n",
+      "  summarize   Summarize the aggregation results.\n",
+      "  visualize   Visualize the aggregation results.\n",
+      "  vocabulary  Retrieve Vocabulary Observation and ResearchStudy resources...\n",
+      "\u001b[0m\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!fq --help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## fq main options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0mUsage: fq main [OPTIONS]\n",
+      "\n",
+      "  Run FHIR GraphDefinition traversal.\n",
+      "\n",
+      "Options:\n",
+      "  --fhir-base-url TEXT            Base URL of the FHIR server.  [required]\n",
+      "  --graph-definition-id TEXT      ID of the GraphDefinition.\n",
+      "  --graph-definition-file-path TEXT\n",
+      "                                  Path to the GraphDefinition JSON file.\n",
+      "  --path TEXT                     Query to start traversal.\n",
+      "  --db-path TEXT                  path to of sqlite db\n",
+      "  --dry-run                       Perform a dry run without making any\n",
+      "                                  changes.\n",
+      "  --debug                         Enable debug mode.\n",
+      "  --log-file TEXT                 Path to the log file.\n",
+      "  --help                          Show this message and exit.\n",
+      "\u001b[0m\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!fq main --help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## fq dataframe options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0mUsage: fq dataframe [OPTIONS]\n",
+      "                    {Specimen|DocumentReference|ResearchSubject|Patient}\n",
+      "\n",
+      "  Create dataframes from the local db.\n",
+      "\n",
+      "Options:\n",
+      "  --db-path TEXT      path to sqlite db\n",
+      "  --output-path TEXT  path output tsv\n",
+      "  --dtale             Open the graph in a browser using the dtale package for\n",
+      "                      interactive data exploration.\n",
+      "  --help              Show this message and exit.\n",
+      "\u001b[0m\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!fq dataframe --help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## fq sumarize options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0mUsage: fq summarize [OPTIONS]\n",
+      "\n",
+      "  Summarize the aggregation results.\n",
+      "\n",
+      "Options:\n",
+      "  --db-path TEXT  path to sqlite db\n",
+      "  --help          Show this message and exit.\n",
+      "\u001b[0m\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!fq summarize --help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## fq visualize options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0mUsage: fq visualize [OPTIONS]\n",
+      "\n",
+      "  Visualize the aggregation results.\n",
+      "\n",
+      "Options:\n",
+      "  --db-path TEXT            path to sqlite db\n",
+      "  --output-path TEXT        path output html\n",
+      "  -i, --ignored-edges TEXT  Edges to ignore in the visualization\n",
+      "  --help                    Show this message and exit.\n",
+      "\u001b[0m\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!fq visualize --help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## fq vocabulary options"
    ]
   },
   {
@@ -33,107 +274,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: fhir-aggregator-client in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (0.1.7)\n",
-      "Requirement already satisfied: click in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir-aggregator-client) (8.1.8)\n",
-      "Requirement already satisfied: requests in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir-aggregator-client) (2.32.3)\n",
-      "Requirement already satisfied: pyyaml in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir-aggregator-client) (6.0.2)\n",
-      "Requirement already satisfied: halo in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir-aggregator-client) (0.0.31)\n",
-      "Requirement already satisfied: httpx in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir-aggregator-client) (0.28.1)\n",
-      "Requirement already satisfied: fhir.resources==8.0.0b4 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir-aggregator-client) (8.0.0b4)\n",
-      "Requirement already satisfied: dotty-dict in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir-aggregator-client) (1.3.1)\n",
-      "Requirement already satisfied: pyvis in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir-aggregator-client) (0.3.2)\n",
-      "Requirement already satisfied: click_default_group in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir-aggregator-client) (1.2.4)\n",
-      "Requirement already satisfied: inflection in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir-aggregator-client) (0.5.1)\n",
-      "Requirement already satisfied: pandas in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir-aggregator-client) (2.2.3)\n",
-      "Requirement already satisfied: fhir-core>=0.1.3 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir.resources==8.0.0b4->fhir-aggregator-client) (1.0.0)\n",
-      "Requirement already satisfied: log-symbols>=0.0.14 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from halo->fhir-aggregator-client) (0.0.14)\n",
-      "Requirement already satisfied: spinners>=0.0.24 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from halo->fhir-aggregator-client) (0.0.24)\n",
-      "Requirement already satisfied: termcolor>=1.1.0 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from halo->fhir-aggregator-client) (2.5.0)\n",
-      "Requirement already satisfied: colorama>=0.3.9 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from halo->fhir-aggregator-client) (0.4.6)\n",
-      "Requirement already satisfied: six>=1.12.0 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from halo->fhir-aggregator-client) (1.16.0)\n",
-      "Requirement already satisfied: anyio in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from httpx->fhir-aggregator-client) (4.8.0)\n",
-      "Requirement already satisfied: certifi in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from httpx->fhir-aggregator-client) (2024.12.14)\n",
-      "Requirement already satisfied: httpcore==1.* in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from httpx->fhir-aggregator-client) (1.0.7)\n",
-      "Requirement already satisfied: idna in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from httpx->fhir-aggregator-client) (3.10)\n",
-      "Requirement already satisfied: h11<0.15,>=0.13 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from httpcore==1.*->httpx->fhir-aggregator-client) (0.14.0)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from pandas->fhir-aggregator-client) (2.2.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from pandas->fhir-aggregator-client) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from pandas->fhir-aggregator-client) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from pandas->fhir-aggregator-client) (2023.3)\n",
-      "Requirement already satisfied: ipython>=5.3.0 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from pyvis->fhir-aggregator-client) (8.30.0)\n",
-      "Requirement already satisfied: jinja2>=2.9.6 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from pyvis->fhir-aggregator-client) (3.1.5)\n",
-      "Requirement already satisfied: jsonpickle>=1.4.1 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from pyvis->fhir-aggregator-client) (4.0.1)\n",
-      "Requirement already satisfied: networkx>=1.11 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from pyvis->fhir-aggregator-client) (3.4.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from requests->fhir-aggregator-client) (3.4.1)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from requests->fhir-aggregator-client) (2.3.0)\n",
-      "Requirement already satisfied: pydantic<3.0,>=2.7.4 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from fhir-core>=0.1.3->fhir.resources==8.0.0b4->fhir-aggregator-client) (2.10.6)\n",
-      "Requirement already satisfied: decorator in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from ipython>=5.3.0->pyvis->fhir-aggregator-client) (5.1.1)\n",
-      "Requirement already satisfied: jedi>=0.16 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from ipython>=5.3.0->pyvis->fhir-aggregator-client) (0.19.2)\n",
-      "Requirement already satisfied: matplotlib-inline in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from ipython>=5.3.0->pyvis->fhir-aggregator-client) (0.1.6)\n",
-      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from ipython>=5.3.0->pyvis->fhir-aggregator-client) (3.0.43)\n",
-      "Requirement already satisfied: pygments>=2.4.0 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from ipython>=5.3.0->pyvis->fhir-aggregator-client) (2.15.1)\n",
-      "Requirement already satisfied: stack-data in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from ipython>=5.3.0->pyvis->fhir-aggregator-client) (0.2.0)\n",
-      "Requirement already satisfied: traitlets>=5.13.0 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from ipython>=5.3.0->pyvis->fhir-aggregator-client) (5.14.3)\n",
-      "Requirement already satisfied: pexpect>4.3 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from ipython>=5.3.0->pyvis->fhir-aggregator-client) (4.8.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from jinja2>=2.9.6->pyvis->fhir-aggregator-client) (3.0.2)\n",
-      "Requirement already satisfied: sniffio>=1.1 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from anyio->httpx->fhir-aggregator-client) (1.3.1)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from jedi>=0.16->ipython>=5.3.0->pyvis->fhir-aggregator-client) (0.8.4)\n",
-      "Requirement already satisfied: ptyprocess>=0.5 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from pexpect>4.3->ipython>=5.3.0->pyvis->fhir-aggregator-client) (0.7.0)\n",
-      "Requirement already satisfied: wcwidth in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from prompt-toolkit<3.1.0,>=3.0.41->ipython>=5.3.0->pyvis->fhir-aggregator-client) (0.2.5)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from pydantic<3.0,>=2.7.4->fhir-core>=0.1.3->fhir.resources==8.0.0b4->fhir-aggregator-client) (0.7.0)\n",
-      "Requirement already satisfied: pydantic-core==2.27.2 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from pydantic<3.0,>=2.7.4->fhir-core>=0.1.3->fhir.resources==8.0.0b4->fhir-aggregator-client) (2.27.2)\n",
-      "Requirement already satisfied: typing-extensions>=4.12.2 in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from pydantic<3.0,>=2.7.4->fhir-core>=0.1.3->fhir.resources==8.0.0b4->fhir-aggregator-client) (4.12.2)\n",
-      "Requirement already satisfied: executing in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from stack-data->ipython>=5.3.0->pyvis->fhir-aggregator-client) (0.8.3)\n",
-      "Requirement already satisfied: asttokens in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from stack-data->ipython>=5.3.0->pyvis->fhir-aggregator-client) (2.0.5)\n",
-      "Requirement already satisfied: pure-eval in /opt/anaconda3/envs/cdapython/lib/python3.13/site-packages (from stack-data->ipython>=5.3.0->pyvis->fhir-aggregator-client) (0.2.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "\u001b[0mUsage: fq vocabulary [OPTIONS] [OUTPUT_PATH]\n",
+      "\n",
+      "  Retrieve Vocabulary Observation and ResearchStudy resources from the FHIR\n",
+      "  server.\n",
+      "\n",
+      "  OUTPUT_PATH: Path to the output file. If not provided, the output will be\n",
+      "  printed to stdout.\n",
+      "\n",
+      "Options:\n",
+      "  --fhir-base-url TEXT  Base URL of the FHIR server.  [required]\n",
+      "  --raw                 Do not create a dataframe. default=False\n",
+      "  --tsv                 Render dataframe as tsv. default=True\n",
+      "  --debug               Enable debug mode.\n",
+      "  --log-file TEXT       Path to the log file. default=\"./fq.log\"\n",
+      "  --help                Show this message and exit.\n",
+      "\u001b[0m\u001b[0m"
      ]
     }
    ],
    "source": [
-    "pip install fhir-aggregator-client\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: FHIR_BASE=https://google-fhir.fhir-aggregator.org\n"
-     ]
-    }
-   ],
-   "source": [
-    "%env FHIR_BASE=https://google-fhir.fhir-aggregator.org"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get a list of searchable CDA tables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0m\u001b[K\u001b[0m\u001b[?25h\u001b[0m\u001b[32m✔\u001b[39m Wrote 21745 vocabularies to vocabulary.tsv\n",
-      "\u001b[0m\u001b[K\u001b[0m\u001b[?25h\u001b[0m\u001b[0m"
-     ]
-    }
-   ],
-   "source": [
-    "!fq vocabulary vocabulary.tsv --fhir-base-url $FHIR_BASE"
+    "!fq vocabulary --help"
    ]
   }
  ],
