formatting improvements test

--- a/docs/documentation/fhirqueryman.ipynb
+++ b/docs/documentation/fhirqueryman.ipynb
@@ -12,14 +12,15 @@
    "metadata": {},
    "source": [
     "!!! tip\n",
-    "    FHIR-Aggregator is a command line package. The following commands are all shown an ipython notebook.\n",
-    "     - to run commands in python you will need to use export the `fq` command to the terminal using the `os` package:\n",
-    "       ```python\n",
-    "          import os\n",
-    "          os.system('fq --help')\n",
-    "       ```\n",
-    "    - to run commands on the command line do not add the `!`, as in:\n",
-    "      `fq --help`"
+    "\n",
+    "   FHIR-Aggregator is a command line package. The following commands are all shown an ipython notebook.\n",
+    "   - to run commands in python you will need to use export the `fq` command to the terminal using the `os` package:\n",
+    "      ```python\n",
+    "         import os\n",
+    "         os.system('fq --help')\n",
+    "      ```\n",
+    "   - to run commands on the command line do not add the `!`, as in:\n",
+    "   `fq --help`"
    ]
   },
   {
@@ -50,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "'pip install fhir-aggregator-client'"
+    "`pip install fhir-aggregator-client`"
    ]
   },
   {
