add more to the fhir-query doc notebook

--- a/docs/documentation/fhirquery.ipynb
+++ b/docs/documentation/fhirquery.ipynb
@@ -20,12 +20,19 @@
    "id": "c0f659e2-4294-4e6b-b376-76ee25546d67",
    "metadata": {},
    "source": [
-    "# Quick Start\n",
+    "## Quick Start\n",
+    "### fq (fhir-query): Your FHIR Querying Assistant\n",
+    "The fq utility, short for \"fhir-query,\" is a command-line tool specifically designed to simplify the process of interacting with FHIR servers. It provides researchers with a convenient way to:\n",
+    "\n",
+    "1. Retrieve the vocabulary of a FHIR server: With the vocabulary command, fq fetches and summarizes the key data elements (CodeableConcepts and Extensions) used within the FHIR data. This creates a central vocabulary Dataframe that helps researchers identify important data elements and their usage within the server.\n",
+    "\n",
+    "\n",
+    "2. Execute queries to retrieve FHIR resources: Researchers can then use fq to execute FHIR queries using a readable syntax. This helps to retrieve and filter data from the FHIR Server based on various search parameters and criteria.\n",
     "\n",
     "## Install the query tool\n",
     "\n",
     "```\n",
-    "!pip install fhir-aggregator-client --no-cache-dir --quiet\n",
+    "!pip install fhir-aggregator-client==0.1.8rc8 --no-cache-dir --quiet\n",
     "\n",
     "```\n",
     "### Check the version\n",
@@ -47,13 +54,7 @@
     "```python {title=\"python\"}\n",
     "import os\n",
     "os.system('fq')\n",
-    "```\n",
-    "\n",
-    "## Run a query\n",
-    "\n",
-    "```\n",
-    "!fq --fhir-base-url $FHIR_BASE  --graph-definition-file-path  ResearchStudyGraph.yaml  --path '/ResearchStudy?identifier=TCGA-BRCA'\n",
-    "```\n"
+    "```"
    ]
   },
   {
@@ -61,18 +62,187 @@
    "id": "bc341858-80cf-424d-9316-42a4a9d69bd2",
    "metadata": {},
    "source": [
-    "### Install the query tool\n",
+    "## Leveraging FHIR GraphDefinition\n",
+    "We can use **[FHIR GraphDefinition](https://hl7.org/fhir/graphdefinition.html)** objects to define and execute graph-based traversals across multiple interconnected FHIR resource graphs. The data retrieved is written to a **local SQLite database** for persistence and later transformed into **analyst-friendly dataframes** for analysis using tools like Python’s pandas library. fhir-query comes with some **GraphDefinitions** pre-installed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0278b92c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!fq ls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c73795fc",
+   "metadata": {},
+   "source": [
+    "#### Run a GraphDefinition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "689b5ff5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env FHIR_BASE= https://google-fhir.fhir-aggregator.org"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08933ae5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!fq run  condition-graph '/Condition?code:text=cholangiocarcinoma'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e77286fa",
+   "metadata": {},
+   "source": [
+    "### Analyze Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f89bf04c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!fq results visualize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab3486dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a graph of the results\n",
     "\n",
-    "#### fq (fhir-query): Your FHIR Querying Assistant\n",
-    "The fq utility, short for \"fhir-query,\" is a command-line tool specifically designed to simplify the process of interacting with FHIR servers. It provides researchers with a convenient way to:\n",
+    "from IPython.display import HTML\n",
+    "with open('fhir-graph.html', 'r') as file:\n",
+    "    html_content = file.read()\n",
     "\n",
-    "1. Retrieve the vocabulary of a FHIR server: With the vocabulary command, fq fetches and summarizes the key data elements (CodeableConcepts and Extensions) used within the FHIR data. This creates a central vocabulary Dataframe that helps researchers identify important data elements and their usage within the server.\n",
+    "# Set the display height (in pixels)\n",
+    "display(HTML(\"<div style='height: 800px;'>{}</div>\".format(html_content)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8540e592",
+   "metadata": {},
+   "source": [
+    "### Create a dataframe of results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c560a0ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!fq results dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dd42c0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
     "\n",
+    "df = pd.read_csv('fhir-graph.tsv', sep='\\t')\n",
     "\n",
-    "2. Execute queries to retrieve FHIR resources: Researchers can then use fq to execute FHIR queries using a readable syntax. This helps to retrieve and filter data from the FHIR Server based on various search parameters and criteria.\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09edbfa5",
+   "metadata": {},
+   "source": [
+    "## Using fhir-query with other servers\n",
+    "You can use `fq` with other FHIR servers. The below example retrieves a study from dbGAP."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a56b1239",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete the previous results, start with a fresh database\n",
+    "!rm ~/.fhir-aggregator/fhir-graph.sqlite\n",
+    "!fq run  --fhir-base-url https://dbgap-api.ncbi.nlm.nih.gov/fhir-jpa-pilot/x1  research-study-link-iterate  '/ResearchStudy?_id=phs001232'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5a78fe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use the same commands to analyse results\n",
+    "!fq results visualize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d547fa13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a graph of the results\n",
     "\n",
-    "#### jq: Your JSON Navigator\n",
-    "The jq utility is a lightweight and flexible command-line JSON processor. It's like a Swiss Army knife for working with JSON data, and it is used here to help organize the responses from the FHIR server in a readable way."
+    "from IPython.display import HTML\n",
+    "with open('fhir-graph.html', 'r') as file:\n",
+    "    html_content = file.read()\n",
+    "\n",
+    "# Set the display height (in pixels)\n",
+    "display(HTML(\"<div style='height: 800px;'>{}</div>\".format(html_content)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3adfba87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a dataframe of results\n",
+    "!fq results dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dda96e76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('fhir-graph.tsv', sep='\\t')\n",
+    "\n",
+    "df"
    ]
   }
  ],
@@ -92,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
