--- a/docs/documentation/filterexamples.ipynb
+++ b/docs/documentation/filterexamples.ipynb
@@ -293,7 +293,12 @@
    "metadata": {},
    "source": [
     "# Something more elaborate\n",
-    "In lieu of pandas filtering, we can use curl to perform more elaborate filtering. In this case we're searching for a specific condition, Neuroblastoma. Here's what each part of the below code is doing:\n",
+    "In lieu of pandas filtering, we can use curl to perform more elaborate filtering. In this case we're searching for a specific condition, Neuroblastoma. We'll leverage the `jq` command line utility for the purposes of formatting the output appropriately. \n",
+    "\n",
+    "#### jq: Your JSON Navigator\n",
+    "The jq utility is a lightweight and flexible command-line JSON processor. It's like a Swiss Army knife for working with JSON data, and it is used here to help organize the responses from the FHIR server in a readable way.\n",
+    " \n",
+    "Here's what each part of the below code is doing:\n",
     "1. FHIR Query: The curl command sends the FHIR query to the server.\n",
     "2. Data Extraction and Formatting: jq extracts the system, code, and display information from the coding elements within each Condition resource and formats them as TSV.\n",
     "3. Sorting: The output is piped to sort to arrange the entries alphabetically.\n",
