cleanup of jupyter notebook examples

--- a/docs/documentation/fhirquery.ipynb
+++ b/docs/documentation/fhirquery.ipynb
@@ -2,22 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "afb07a33-92fe-4f37-87a3-96308aaba1b7",
+   "id": "9d41b980",
    "metadata": {},
    "source": [
-    "# Using the fhir-query tool\n",
-    "\n",
-    "## FHIR-Aggregator: A Catalog of Research Data\n",
-    "The FHIR Aggregator acts as a centralized repository for diverse healthcare data, organized using the FHIR (Fast Healthcare Interoperability Resources) standard. It provides researchers access to a wide range of information, including:\n",
-    "\n",
-    "* Clinical data: Patient demographics, conditions, medications, observations, and procedures.\n",
-    "* Research studies: Information about research projects, participants, and study protocols.\n",
-    "* OMICS data associated with Specimens\n"
+    "# Using fhir-query"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c0f659e2-4294-4e6b-b376-76ee25546d67",
+   "id": "a7b05ce3",
    "metadata": {},
    "source": [
     "## fq (fhir-query): Your FHIR Querying Assistant\n",
@@ -26,34 +19,61 @@
     "1. Retrieve the vocabulary of a FHIR server: With the vocabulary command, fq fetches and summarizes the key data elements (CodeableConcepts and Extensions) used within the FHIR data. This creates a central vocabulary Dataframe that helps researchers identify important data elements and their usage within the server.\n",
     "\n",
     "\n",
-    "2. Execute queries to retrieve FHIR resources: Researchers can then use fq to execute FHIR queries using a readable syntax. This helps to retrieve and filter data from the FHIR Server based on various search parameters and criteria.\n",
+    "2. Execute queries to retrieve FHIR resources: Researchers can then use fq to execute FHIR queries using a readable syntax. This helps to retrieve and filter data from the FHIR Server based on various search parameters and criteria."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "55d402b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install fhir-aggregator-client --no-cache-dir --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bd1e35f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usage: fq [OPTIONS] COMMAND [ARGS]...\n",
+      "\n",
+      "  Run FHIR GraphDefinition traversal.\n",
+      "\n",
+      "Options:\n",
+      "  --help  Show this message and exit.\n",
+      "\n",
+      "Commands:\n",
+      "  main*       Run FHIR GraphDefinition traversal.\n",
+      "  dataframe   Create dataframes from the local db.\n",
+      "  summarize   Summarize the aggregation results.\n",
+      "  visualize   Visualize the aggregation results.\n",
+      "  vocabulary  Retrieve Vocabulary Observation and ResearchStudy resources...\n"
+     ]
+    }
+   ],
+   "source": [
+    "!fq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "570622ec",
+   "metadata": {},
+   "source": [
+    "### Overview  \n",
     "\n",
-    "## Install the query tool\n",
+    "This notebook leverages **[FHIR GraphDefinition](https://hl7.org/fhir/graphdefinition.html)** objects to define and execute graph-based traversals across multiple interconnected FHIR resource graphs. The data retrieved is written to a **local SQLite database** for persistence and later transformed into **analyst-friendly dataframes** for analysis using tools like Python’s pandas library.\n",
     "\n",
-    "```\n",
-    "!pip install fhir-aggregator-client==0.1.8rc8 --no-cache-dir --quiet\n",
+    "By using **FHIR GraphDefinition**, we declaratively define resource relationships and efficiently retrieve data. Once retrieved, the data is stored locally and can be transformed into dataframes for advanced analysis.\n",
     "\n",
-    "```\n",
-    "### Check the version\n",
-    "\n",
-    "```\n",
-    "!pip freeze | grep fhir_aggregator_client\n",
-    "```\n",
-    "\n",
-    "### Verify the install\n",
-    "\n",
-    "```bash {title=\"command line\"}\n",
-    "fq\n",
-    "```\n",
-    "\n",
-    "```python {title=\"ipython\"}\n",
-    "!fq\n",
-    "```\n",
-    "\n",
-    "```python {title=\"python\"}\n",
-    "import os\n",
-    "os.system('fq')\n",
-    "```"
+    "The [fhir-aggregator-client](https://github.com/FHIR-Aggregator/fhir-aggregator-client) tool runs an R5 GraphDefinition against a FHIR server"
    ]
   },
   {
@@ -61,64 +81,100 @@
    "id": "bc341858-80cf-424d-9316-42a4a9d69bd2",
    "metadata": {},
    "source": [
-    "## Utilizing FHIR GraphDefinition\n",
-    "We can use **[FHIR GraphDefinition](https://hl7.org/fhir/graphdefinition.html)** objects to define and execute graph-based traversals across multiple interconnected FHIR resource graphs. The data retrieved is written to a **local SQLite database** for persistence and later transformed into **analyst-friendly dataframes** for analysis using tools like Python’s pandas library. fhir-query comes with some **GraphDefinitions** pre-installed."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0278b92c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!fq ls --fhir_base_url https://google-fhir.fhir-aggregator.org"
+    "### Key Features  \n",
+    "\n",
+    "- **GraphDefinition-Driven Traversals**: Use GraphDefinition objects to define explicit relationships between resources and automate traversal logic.  \n",
+    "- **Local SQLite Storage**: Persist the retrieved FHIR data in a local SQLite database for querying and offline analysis.  \n",
+    "- **Analyst-Friendly Dataframes**: Convert stored FHIR resources into pandas dataframes for ease of use in analytical workflows.  \n",
+    "- **Reusable Graph Definitions**: Maintain a library of GraphDefinition YAML files that can be reused across different workflows and projects.  Researchers and Data submitters can publish GraphDefinition files to help others navigate their data."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c73795fc",
+   "id": "e026d28d",
    "metadata": {},
    "source": [
-    "#### Run a GraphDefinition"
+    "### Run a GraphDefinition"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "08933ae5",
+   "execution_count": 16,
+   "id": "57469855",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"<frozen runpy>\", line 198, in _run_module_as_main\n",
+      "  File \"<frozen runpy>\", line 88, in _run_code\n",
+      "  File \"C:\\Users\\Parker.Gray\\AppData\\Local\\Programs\\Python\\Python313\\Scripts\\fq.exe\\__main__.py\", line 7, in <module>\n",
+      "    sys.exit(cli.cli())\n",
+      "             ~~~~~~~^^\n",
+      "  File \"C:\\Users\\Parker.Gray\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\click\\core.py\", line 1161, in __call__\n",
+      "    return self.main(*args, **kwargs)\n",
+      "           ~~~~~~~~~^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Parker.Gray\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\click\\core.py\", line 1082, in main\n",
+      "    rv = self.invoke(ctx)\n",
+      "  File \"C:\\Users\\Parker.Gray\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\click\\core.py\", line 1697, in invoke\n",
+      "    return _process_result(sub_ctx.command.invoke(sub_ctx))\n",
+      "                           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^\n",
+      "  File \"C:\\Users\\Parker.Gray\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\click\\core.py\", line 1443, in invoke\n",
+      "    return ctx.invoke(self.callback, **ctx.params)\n",
+      "           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Parker.Gray\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\click\\core.py\", line 788, in invoke\n",
+      "    return __callback(*args, **kwargs)\n",
+      "  File \"C:\\Users\\Parker.Gray\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\fhir_query\\cli.py\", line 61, in main\n",
+      "    runner = GraphDefinitionRunner(fhir_base_url, db_path, debug)\n",
+      "  File \"C:\\Users\\Parker.Gray\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\fhir_query\\__init__.py\", line 242, in __init__\n",
+      "    super().__init__(db_path)\n",
+      "    ~~~~~~~~~~~~~~~~^^^^^^^^^\n",
+      "  File \"C:\\Users\\Parker.Gray\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\fhir_query\\__init__.py\", line 44, in __init__\n",
+      "    self.connection = sqlite3.connect(db_path)\n",
+      "                      ~~~~~~~~~~~~~~~^^^^^^^^^\n",
+      "sqlite3.OperationalError: unable to open database file\n"
+     ]
+    }
+   ],
    "source": [
-    "!fq run condition-graph '/Condition?code:text=cholangiocarcinoma' --fhir_base_url https://google-fhir.fhir-aggregator.org"
+    "!fq --fhir-base-url https://google-fhir.fhir-aggregator.org --graph-definition-id '/Condition?code:text=cholangiocarcinoma'"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e77286fa",
+   "id": "714f336e",
    "metadata": {},
    "source": [
-    "### Visualize Results"
+    "#### Analyse Results\n",
+    "\n",
+    "The graph represents relationships between different FHIR resources.Examples of FHIR resources include Patient, Condition, Observation, Procedure, etc.\n",
+    "\n",
+    "Each node is labled as: <resource_type\\>/<count\\> the number of records of that type retrieved.\n",
+    "\n",
+    "The edges in the graph are weighted.  The thicker the line, the more connections there are between nodes."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f89bf04c",
+   "id": "1c5a4b81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!fq results visualize --fhir_base_url https://google-fhir.fhir-aggregator.org"
+    "# Create a graph of the results\n",
+    "!fq results visualize"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab3486dc",
+   "id": "12238bee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a graph of the results\n",
+    "# Read the locally stored HTML file containing a graph visualization and displaying it within the Jupyter notebook.\n",
     "\n",
     "from IPython.display import HTML\n",
     "with open('fhir-graph.html', 'r') as file:\n",
@@ -130,49 +186,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8540e592",
+   "id": "4345a16d",
    "metadata": {},
    "source": [
-    "### Create a dataframe of results"
+    "#### Create a dataframe of results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c560a0ef",
+   "id": "56051779",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!fq results dataframe --fhir_base_url https://google-fhir.fhir-aggregator.org"
+    "!fq results dataframe"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dd42c0d",
+   "id": "bc6862c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
+    "import pandas as pd \n",
     "df = pd.read_csv('fhir-graph.tsv', sep='\\t')\n",
-    "\n",
     "df"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "09edbfa5",
+   "id": "bd9d44d0",
    "metadata": {},
    "source": [
-    "## Using fhir-query with other servers\n",
-    "You can use `fq` with other FHIR servers. The below example retrieves a study from dbGAP."
+    "### Other servers\n",
+    "\n",
+    "You can use the `fq` tool with other FHIR servers.  For example, this query retrieves a study from `dbGAP`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a56b1239",
+   "id": "740c86c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5a78fe0",
+   "id": "e22a980d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d547fa13",
+   "id": "bba2e679",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3adfba87",
+   "id": "5d727347",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda96e76",
+   "id": "1d5fe7d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,158 +287,6 @@
     "df = pd.read_csv('fhir-graph.tsv', sep='\\t')\n",
     "\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "35074ab3",
-   "metadata": {},
-   "source": [
-    "## Start to Finish Example: Plotting Survival Curves with fhir-query\n",
-    "In this example, we'll look through the TCGA ResearchStudy for breast cancer patients and divide these patients into two cohors, White & Under 50 and African American & Under 50. After obtaining the necessary slices we'll compare the Kaplan-Meier curves of the two cohorts."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61ce5430",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install lifelines -q"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8c6333f4",
-   "metadata": {},
-   "source": [
-    "We provide our own GraphDefinition here."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a638b0bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!wget https://raw.githubusercontent.com/FHIR-Aggregator/fhir-query/refs/heads/main/graph-definitions/R5/ResearchStudyGraph.yaml"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b9965516",
-   "metadata": {},
-   "source": [
-    "### Export TCGA-BRCA data to a local database and create a dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "157d5aa9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env  FHIR_BASE=https://google-fhir.fhir-aggregator.org\n",
-    "# export a study using a set of stored queries\n",
-    "!fq --fhir-base-url $FHIR_BASE  --graph-definition-file-path  ResearchStudyGraph.yaml  --path '/ResearchStudy?identifier=TCGA-BRCA'\n",
-    "!fq dataframe"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4d1b57e7",
-   "metadata": {},
-   "source": [
-    "### Survival analysis\n",
-    "After retrieving the data, we use the previous installed library lifelines to plot Kaplan-Meier curves of the two cohorts."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "402da589",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from lifelines import KaplanMeierFitter\n",
-    "kmf = KaplanMeierFitter()\n",
-    "\n",
-    "# read the data into a dataframe\n",
-    "df = pd.read_csv('/tmp/fhir-graph.tsv')\n",
-    "\n",
-    "# get days to death data in the necessary formay\n",
-    "df['days_to_death'] = (\n",
-    "    df['patient_observation_days_between_diagnosis_and_death']\n",
-    "    .str.replace(' days', '', regex=False)\n",
-    "    .replace('', np.nan)\n",
-    "    .astype(float)\n",
-    ")\n",
-    "# get age data in the necessary format\n",
-    "df['age_at_diagnosis'] = (\n",
-    "    df['patient_observation_days_between_birth_and_diagnosis']\n",
-    "    .str.replace(' days', '', regex=False)\n",
-    "    .replace('', np.nan)\n",
-    "    .astype(float)\n",
-    ")\n",
-    "\n",
-    "# group by patient_id\n",
-    "df_unique = df.drop_duplicates(subset=['patient_id'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd394d31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_cohort = df_unique[ (df_unique['age_at_diagnosis'] >= -50*365 )\n",
-    "                      & (df_unique['patient_us_core_race'].isin(['black or african american','white']) )\n",
-    "                      & (df_unique['patient_us_core_ethnicity'] == 'not hispanic or latino')   ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88d159a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fill in NAs in days_to_death with the max from the days to death\n",
-    "T = df_cohort['days_to_death'].fillna(df_cohort['days_to_death'].max())\n",
-    "\n",
-    "# Convert the vital status to numbers\n",
-    "E = df_cohort['patient_deceasedBoolean'].astype(bool)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd695048",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig=plt.figure(figsize=(13, 8), dpi= 80)\n",
-    "#plt.style.use('seaborn-colorblind')\n",
-    "ax = plt.subplot(111,\n",
-    "                 title = \"Survival Curve\")\n",
-    "\n",
-    "for r in  df_cohort['patient_us_core_race'].sort_values().unique() :\n",
-    "  if (r != None):\n",
-    "    cohort = df_cohort['patient_us_core_race'] == r\n",
-    "    kmf.fit(T.loc[cohort], E.loc[cohort], label=r)\n",
-    "    kmf.plot(ax=ax, )\n",
-    "  else:\n",
-    "    print(\"\")\n",
-    "\n",
-    "ax.set_ylabel(\"Percent Survival\")\n",
-    "ax.set_xlabel(\"Days\")"
    ]
   }
  ],
